--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,16 @@
             <p class="text-muted">{% now "jS F Y" %}</p>
             <div class="col-md-7 col-lg-7" style="height: 450px; overflow: scroll;">
                 <!-- List of all the tasks for the day -->
-                
+                 <div class="card m-1">
+                    <div class="card-body">
+                        This is some task
+                        <span style="position: relative; float: right;">
+                            <a href="" class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
+                            <a href=""class="btn btn-danger"><i class="fa fa-trash"></i></a>
+                            <a href="" class="btn btn-primary"><i class="fa fa-pencil"></i></a>
+                        </span>
+                    </div>
+                </div>
             </div>
             <div class="col-md-5 col-lg-5">
                 <h5>Completed Tasks</h5>
