--- a/templates/home.html
+++ b/templates/home.html
@@ -26,9 +26,10 @@
             <p class="text-muted">{% now "jS F Y" %}</p>
             <div class="col-md-7 col-lg-7" style="height: 450px; overflow: scroll;">
                 <!-- List of all the tasks for the day -->
-                 <div class="card m-1">
+                 {% for task in tasks %}
+                <div class="card m-1">
                     <div class="card-body">
-                        This is some task
+                        {{task.task}}
                         <span style="position: relative; float: right;">
                             <a href="" class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
                             <a href=""class="btn btn-danger"><i class="fa fa-trash"></i></a>
@@ -36,6 +37,7 @@
                         </span>
                     </div>
                 </div>
+                {% endfor %}
             </div>
             <div class="col-md-5 col-lg-5">
                 <h5>Completed Tasks</h5>
