--- a/templates/home.html
+++ b/templates/home.html
@@ -47,7 +47,8 @@
         <div class="row">
             <div class="col-md-6 col-lg-6 p-0" style="position: absolute; bottom: 50px;">
                 <!-- To Do Form -->
-                <form method="POST" >
+                <form action="{% url 'addTask' %}" method="POST" >
+                    {% csrf_token %}
                     <div class="form-group">
                         <span style="display: flex;">
                             <input type="text" name="task" class="form-control" placeholder="Add a task">
